force-app/commons/triggerHandler/objects/TriggerLogic__mdt/TriggerLogic__mdt.object-meta.xml
<CustomObject>
    <label>Trigger Logic</label>
    <pluralLabel>Trigger Logics</pluralLabel>
</CustomObject>