force-app/commons/triggerHandler/objects/TriggerLogic__mdt/fields/AfterDelete__c.field-meta.xml
<CustomField>
    <fullName>AfterDelete__c</fullName>
    <defaultValue>false</defaultValue>
    <label>After Delete</label>
    <type>Checkbox</type>
</CustomField>