force-app/commons/triggerHandler/objects/TriggerLogic__mdt/fields/AfterUndelete__c.field-meta.xml
<CustomField>
    <fullName>AfterUndelete__c</fullName>
    <defaultValue>false</defaultValue>
    <label>After Undelete</label>
    <type>Checkbox</type>
</CustomField>