force-app/commons/triggerHandler/objects/TriggerLogic__mdt/fields/AfterUpdate__c.field-meta.xml
<CustomField>
    <fullName>AfterUpdate__c</fullName>
    <defaultValue>false</defaultValue>
    <label>After Update</label>
    <type>Checkbox</type>
</CustomField>