force-app/commons/triggerHandler/objects/TriggerLogic__mdt/fields/Async__c.field-meta.xml
<CustomField>
    <fullName>Async__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether this logic will run asynchronously through Queueable.</description>
    <inlineHelpText>Run this logic asynchronously. Class may, but does not have to implement Queueable interface</inlineHelpText>
    <label>Async</label>
    <type>Checkbox</type>
</CustomField>