force-app/commons/triggerHandler/objects/TriggerLogic__mdt/fields/BeforeInsert__c.field-meta.xml
<CustomField>
    <fullName>BeforeInsert__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Before Insert</label>
    <type>Checkbox</type>
</CustomField>