force-app/commons/triggerHandler/objects/TriggerLogic__mdt/fields/Package__c.field-meta.xml
<CustomField>
    <fullName>Package__c</fullName>
    <description>Name of package or functional prefix which corresponds to team in multi-team environments.
Trigger Logic is executed by first by Package lexicographical order and then by Order field. 
This allows each team/package to have independent Order sequence.</description>
    <inlineHelpText>Name of package or functional prefix which corresponds to team in multi-team environments.</inlineHelpText>
    <label>Package</label>
    <length>63</length>
    <type>Text</type>
</CustomField>