force-app/commons/triggerHandler/objects/TriggerLogic__mdt/fields/Trigger__c.field-meta.xml
<CustomField>
    <fullName>Trigger__c</fullName>
    <label>Trigger</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>BEFORE_INSERT</fullName>
                <default>true</default>
                <label>BEFORE_INSERT</label>
            </value>
            <value>
                <fullName>BEFORE_UPDATE</fullName>
            </value>
            <value>
                <fullName>BEFORE_DELETE</fullName>
            </value>
            <value>
                <fullName>AFTER_INSERT</fullName>
            </value>
            <value>
                <fullName>AFTER_DELETE</fullName>
            </value>
            <value>
                <fullName>AFTER_UNDELETE</fullName>
            </value>
            <value>
                <fullName>AFTER_UPDATE</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>