force-app/commons/triggerHandler/objects/TriggerLogic__mdt/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <inlineHelpText>Depending on the selected value, Apex class should implement following interface:
Field Default - TriggerFieldDefault
Validation Rule - TriggerValidationRule
Logic - TriggerLogic</inlineHelpText>
    <label>Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Field Default</fullName>
                <default>true</default>
                <label>Field Default</label>
            </value>
            <value>
                <fullName>Validation Rule</fullName>
            </value>
            <value>
                <fullName>Logic</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>