force-app/commons/triggerHandler/objects/TriggerLogic__mdt/validationRules/Field.validationRule-meta.xml
<ValidationRule>
    <fullName>Field</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    ISPICKVAL(Type__c, &quot;Field Default&quot;),
    NOT(OR( BeforeInsert__c, BeforeUpdate__c)
)
)</errorConditionFormula>
    <errorDisplayField>Type__c</errorDisplayField>
    <errorMessage>Field Default can be only executed on BEFORE INSERT and BEFORE UPDATE trigger.</errorMessage>
</ValidationRule>