force-app/commons/triggerHandler/objects/TriggerLogic__mdt/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>MasterLabel</columns>
    <columns>Enabled__c</columns>
    <columns>SObject__c</columns>
    <columns>Type__c</columns>
    <columns>Trigger__c</columns>
    <columns>ApexClass__c</columns>
    <columns>Order__c</columns>
    <columns>Description__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>