force-app/commons/triggerHandler/objects/TriggerLogic__mdt/listViews/AllRecords.listView-meta.xml
<ListView>
    <fullName>AllRecords</fullName>
    <columns>MasterLabel</columns>
    <columns>Enabled__c</columns>
    <columns>SObject__c</columns>
    <columns>Order__c</columns>
    <columns>Async__c</columns>
    <columns>Description__c</columns>
    <columns>BeforeInsert__c</columns>
    <columns>AfterInsert__c</columns>
    <columns>BeforeUpdate__c</columns>
    <columns>AfterUpdate__c</columns>
    <columns>BeforeDelete__c</columns>
    <columns>AfterDelete__c</columns>
    <columns>AfterUndelete__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Records</label>
</ListView>